--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 		</div>
 		
 		<div class="crypto-weather">
-			<div>
-				<div class="crypto" id="crypto-el">Crypto</div>
+			<!-- <div>
+				<div class="crypto" id="crypto-el"></div>
 				<h2>current price:</h2>
 				<p id="euro"><span>&#8364;</span></p>
 				<p id="dollar"><span>&#36;</span></p>
-			</div>
+			</div> -->
 			<div>
 				<div class="weather" id="weather-el">weather</div>
 								
